<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentMain">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantidadejogadores"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/doisJogadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/doisJogadores"
            android:checked="true"/>


        <RadioButton
            android:id="@+id/tresJogadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tresJogadores" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_jogada" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/dedraIB"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@mipmap/testefundo2"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/pedra"
            android:contentDescription="@string/opcaopedra"/>

        <ImageButton
            android:id="@+id/papelIB"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@mipmap/testefundo2"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/papel"
            android:contentDescription="@string/opcaopapel"/>

        <ImageButton
            android:id="@+id/tesouraIB"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@mipmap/testefundo2"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/tesoura"
            android:contentDescription="@string/opcaotesoura"/>

    </LinearLayout>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="20sp"
        android:text="@string/resultado" />

    <LinearLayout
        android:id="@+id/suaJogadaLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/borda"
        android:visibility="gone">

        <ImageView
            android:id="@+id/suaJogadaIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/pedra"
            app:tint="#008000"
            android:contentDescription="@string/jogada"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/jogada" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="6dp">

        <LinearLayout
            android:id="@+id/jogadaMaquina01LL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:background="@drawable/borda"
            android:visibility="gone">

            <ImageView
                android:id="@+id/jogadaMaquina01IV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/pedra"
                app:tint="#008000"
                android:contentDescription="@string/jogada"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="@string/maquina01" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/jogadaMaquina02LL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:background="@drawable/borda"
            android:visibility="gone">

            <ImageView
                android:id="@+id/jogadaMaquina02IV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/pedra"
                app:tint="#008000"
                android:contentDescription="@string/jogada"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="@string/maquina02" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>